# rshogi

./: .gitattributes  .gitignore  .mcp.json  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.json  clippy.toml  compare_nodes.toml.example  csa_client_example.toml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  profile_report.txt  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.json  turbo.json
crates/rshogi-core/: Cargo.toml  README.md  build.rs
crates/rshogi-core/src/: lib.rs
crates/rshogi-core/src/bitboard/: check_candidate.rs  core.rs  mod.rs  sliders.rs  tables.rs  utils.rs
crates/rshogi-core/src/eval/: eval_hash.rs  material.rs  mod.rs
crates/rshogi-core/src/mate/: drop_mate.rs  helpers.rs  mod.rs  move_mate.rs  tables.rs
crates/rshogi-core/src/movegen/: generator.rs  types.rs
crates/rshogi-core/src/nnue/: accumulator.rs  accumulator_layer_stacks.rs  accumulator_stack_variant.rs  activation.rs  aliases.rs  bona_piece.rs  bona_piece_halfka.rs  bona_piece_halfka_hm.rs  bona_piece_halfka_hm_split.rs  constants.rs  evaluator.rs  feature_transformer.rs  feature_transformer_layer_stacks.rs  hand_count.rs  hand_threat_features.rs  layer_stacks.rs  layers.rs  leb128.rs  ls_feature_spec.rs  macros.rs  mod.rs  network.rs  network_halfka.rs  network_halfka_hm.rs  network_halfka_hm_split.rs  network_halfka_merged.rs  network_halfkp.rs  network_layer_stacks.rs  piece_list.rs  shared_weights.rs  spec.rs  stats.rs  threat_exclusion.rs  threat_features.rs
crates/rshogi-core/src/position/: board_effect.rs  json_conversion.rs  mod.rs  move_features.rs  movepicker_support.rs  pos.rs  sfen.rs  state.rs  zobrist.rs
crates/rshogi-core/src/search/: alpha_beta.rs  engine.rs  eval_helpers.rs  history.rs  mod.rs  movepicker.rs  pruning.rs  qsearch.rs  search_helpers.rs  stats.rs  thread.rs  time_manager.rs  tt_history.rs  tt_sanity.rs  tune_params.rs  types.rs
crates/rshogi-core/src/tt/: alloc.rs  entry.rs  mod.rs  table.rs
crates/rshogi-core/src/types/: color.rs  depth.rs  entering_king.rs  mod.rs  moves.rs  piece.rs  square.rs  value.rs
crates/rshogi-core/tests/: build_rs_checks.rs
crates/rshogi-csa-client/: Cargo.toml
crates/rshogi-csa-client/examples/: README.md  csa_client.toml.example
crates/rshogi-csa-client/examples/csa_client_staging/: staging-black.toml.example  staging-white.toml.example
crates/rshogi-csa-client/src/: config.rs  engine.rs  events.rs  jsonl.rs  lib.rs  main.rs  protocol.rs  record.rs  session.rs  transport.rs
crates/rshogi-csa-client/tests/: csa_reconnect_protocol.rs  csa_ws_transport.rs  engine_stderr_diagnostic.rs  jsonl_output.rs  lib_consumer.rs  rate_limit_retry_after.rs  session_events_integration.rs  session_events_unit.rs
crates/rshogi-csa-server/: Cargo.toml
crates/rshogi-csa-server-tcp/: Cargo.toml
crates/rshogi-csa-server-tcp/config-examples/: clock_presets.toml
crates/rshogi-csa-server-tcp/src/: auth.rs  broadcaster.rs  lib.rs  metrics.rs  phase_gate.rs  rate_limit.rs  scheduler.rs  server.rs  transport.rs
crates/rshogi-csa-server-tcp/tests/: e2e_phase1.rs  floodgate_acceptance.rs  metrics_exporter.rs  tcp_session.rs
crates/rshogi-csa-server-workers/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  wrangler.production.toml  wrangler.staging.toml  wrangler.toml.example
crates/rshogi-csa-server-workers/src/: admin_auth.rs  attachment.rs  backfill.rs  client_kind.rs  config.rs  datetime.rs  floodgate_history.rs  game_room.rs  games_index.rs  handle_auth.rs  lib.rs  live_games_index.rs  lobby.rs  lobby_protocol.rs  origin.rs  persistence.rs  phase_gate.rs  rate_limit.rs  reconnect.rs  room_id.rs  router.rs  session_state.rs  spectator_control.rs  spectator_snapshot.rs  viewer_api.rs  ws_route.rs  x1_paths.rs
crates/rshogi-csa-server-workers/tests/: core_contract_smoke.rs  do_schema_additive_contract.rs  wrangler_environment_toml_consistency.rs  wrangler_production_toml_consistency.rs  wrangler_template_consistency.rs
crates/rshogi-csa-server-workers/tests/miniflare_smoke/: agree_timeout.test.ts  floodgate_history.test.ts  global-setup.ts  handle_auth.test.ts  harness.ts  lobby.test.ts  origin_route.test.ts  rate_limit.test.ts  reconnect.test.ts  reconnect_alarm.test.ts  reconnect_disabled.test.ts  restart.test.ts  smoke.test.ts  smoke_countdown_msec.test.ts  tsconfig.json  vitest.config.ts  ws_test_helpers.ts
crates/rshogi-csa-server/src/: config.rs  error.rs  lib.rs  port.rs  scheduler.rs  types.rs
crates/rshogi-csa-server/src/game/: clock.rs  mod.rs  result.rs  room.rs  run_loop.rs  validator.rs
crates/rshogi-csa-server/src/matching/: challenge.rs  league.rs  mod.rs  pairing.rs  registry.rs
crates/rshogi-csa-server/src/protocol/: command.rs  info.rs  mod.rs  summary.rs
crates/rshogi-csa-server/src/record/: kifu.rs  mod.rs
crates/rshogi-csa-server/src/storage/: buoy.rs  file.rs  floodgate_history.rs  mod.rs  players_yaml.rs
crates/rshogi-csa-server/tests/: license_integrity.rs
crates/rshogi-usi/: Cargo.toml  README.md
crates/rshogi-usi/src/: main.rs
crates/rshogi-usi/tests/: usi_flow.rs
crates/tools/: Cargo.toml  README.md
crates/tools/docs/: engine_selfplay.md  extract_bench_positions.md  gensfen.md  kifu_player.md  label_bench_dl.md  label_bench_positions.md  pack_tools.md  prep_hcpe.md  psv_dedup_bloom.md  psv_dedup_partition.md  rescore_hcpe.md  rescore_psv.md  shuffle_psv.md  spsa_runbook.md  tools-reference.md  tournament.md  training_data_pipeline.md  yardstick_label.md  yardstick_score.md
crates/tools/examples/: README.md
crates/tools/src/: aobazero_features.rs  bench_nnue_eval_tool.rs  config.rs  dlshogi_features.rs  eval_sfens_tool.rs  kif.rs  lib.rs  packed_sfen.rs  positions.rs  qsearch_pv.rs  report.rs  spsa_param_mapping.rs  system.rs  teacher_labeler.rs  utils.rs  verify_nnue_accumulator_tool.rs
crates/tools/src/common/: csa.rs  dedup.rs  (+4 more)
crates/tools/tests/: csa_ws_transport.rs  psv_to_hcpe3_integration.rs  spsa_run_dir_integration.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
(+260 files in other folders)
