[workspace]
resolver = "2"
members = [
    "crates/rshogi-core",
    "crates/rshogi-csa",
    "crates/rshogi-csa-server",
    "crates/rshogi-csa-server-tcp",
    "crates/rshogi-csa-server-workers",
    "crates/rshogi-usi",
    "crates/tools",
]

[workspace.dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
flate2 = "1.0"
chrono = "0.4"
anyhow      = "1.0"
log         = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11"
rand = "0.9"
rand_xoshiro = "0.7"
regex = "1.11.2"
toml = "0.8"
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "io-util", "sync", "fs"] }
# getrandom with wasm_js feature for WebAssembly support
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }


# Debug build optimizations for reasonable test performance
# TT operations with SIMD and CAS loops are extremely slow without optimization
[profile.dev]
opt-level = 1  # Basic optimizations for debug builds
panic = "unwind"

# Release build - 開発時用（高速ビルド）
[profile.release]
opt-level = 3
overflow-checks = true    # オーバーフロー検出（安全性重視）
lto = "thin"              # 高速なLTO
codegen-units = 4         # 並列ビルド
panic = "unwind"
strip = "symbols"

# Production build - 本番デプロイ用（最大最適化）
# 使用方法: cargo build --profile production
[profile.production]
inherits = "release"
overflow-checks = false   # 本番では無効化（速度優先）
lto = "fat"               # 最大LTO
codegen-units = 1         # 最適化優先
panic = "abort"           # 小さいバイナリ
