[workspace]
resolver = "2"
members = [
    "crates/rshogi-core",
    "crates/rshogi-csa",
    "crates/rshogi-csa-client",
    "crates/rshogi-csa-server",
    "crates/rshogi-csa-server-tcp",
    "crates/rshogi-csa-server-workers",
    "crates/rshogi-usi",
    "crates/tools",
]

[workspace.dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
serde_yaml  = "0.9"
flate2 = "1.0"
chrono = "0.4"
anyhow      = "1.0"
log         = "0.4"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11"
tracing = "0.1"
# subscriber / log bridge / metrics 系は subscriber / recorder 初期化を担う
# binary crate（`rshogi-csa-server-tcp` 等）でのみ依存する。library crate は
# `xxx.workspace = true` を書かないことで自動的にこれらが pull されないようにし、
# workspace でのバージョン pin を一元化する。
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "tracing-log", "ansi"] }
tracing-log = "0.2"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
rand = "0.9"
rand_xoshiro = "0.7"
regex = "1.11.2"
toml = "0.8"
smallvec = "1.15"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "io-util", "sync", "fs"] }
# getrandom with wasm_js feature for WebAssembly support
getrandom = { version = "0.3", default-features = false, features = ["wasm_js"] }


# Debug build optimizations for reasonable test performance
# TT operations with SIMD and CAS loops are extremely slow without optimization
[profile.dev]
opt-level = 1  # Basic optimizations for debug builds
panic = "unwind"

# Release build - 開発時用（高速ビルド）
[profile.release]
opt-level = 3
overflow-checks = true    # オーバーフロー検出（安全性重視）
lto = "thin"              # 高速なLTO
codegen-units = 4         # 並列ビルド
panic = "unwind"
strip = "symbols"

# Profiling build - perf 計測用（release + debug info）
# 使用方法: cargo build --profile profiling
[profile.profiling]
inherits = "release"
debug = true              # DWARF debug info
strip = "none"            # シンボル保持

# Production build - 本番デプロイ用（最大最適化）
# 使用方法: cargo build --profile production
[profile.production]
inherits = "release"
overflow-checks = false   # 本番では無効化（速度優先）
lto = "fat"               # 最大LTO
codegen-units = 1         # 最適化優先
panic = "abort"           # 小さいバイナリ
