[package]
name = "rshogi-core"
version = "0.1.4"
edition = "2021"
authors = ["sh11235"]
description = "A high-performance shogi engine core library with NNUE evaluation"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "japanese-chess", "game", "engine", "nnue"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
log.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Keep in sync with clap's transitive windows-sys (0.60.x) to avoid duplicate versions on Windows.
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

# getrandom for WebAssembly support (required by rand)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
# Rayon for parallel search in Wasm (enabled via wasm-threads feature)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test dependencies

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = "1"

[features]
default = []
# デバッグ機能
debug = []
# SIMD最適化（AVX2）
simd_avx2 = []
# 診断ログ
diagnostics = []
# WebAssembly スレッドビルド用フラグ
# wasm-bindgen-rayon + rayon を使用した LazySMP 並列探索を有効化
# 詳細は docs/wasm-multithreading-investigation.md を参照。
wasm-threads = ["rayon"]
# YaneuraOu DEEP相当のデフォルト遅延設定を使う
# GPU/ネットワーク待ちが長い環境向けの遅延マージン(400/1400ms)プリセットを有効化する
deep = []

[lib]
name = "rshogi_core"
path = "src/lib.rs"
