[package]
name = "rshogi-core"
version = "0.1.9"
edition = "2021"
authors = ["sh11235"]
description = "A high-performance shogi engine core library with NNUE evaluation"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "japanese-chess", "game", "engine", "nnue"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
log.workspace = true
once_cell.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Keep in sync with clap's transitive windows-sys (0.60.x) to avoid duplicate versions on Windows.
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

# getrandom for WebAssembly support (required by rand)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
# Rayon for parallel search in Wasm (enabled via wasm-threads feature)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test dependencies

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = "1"

[features]
# 探索経路では pass_rights / PASS NMP を無効化
# Web/WASM で pass ルールを使う場合は default-features=false で無効化する。
default = ["search-no-pass-rules"]
# デバッグ機能
debug = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = []
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = []
# SIMD最適化（AVX2）
simd_avx2 = []
# 診断ログ
diagnostics = []
# WebAssembly スレッドビルド用フラグ
# wasm-bindgen-rayon + rayon を使用した LazySMP 並列探索を有効化
# 詳細は docs/wasm-multithreading-investigation.md を参照。
wasm-threads = ["rayon"]
# TT trace / helper TT write 制御（並列探索デバッグ用）
# 有効時は環境変数で制御: RSHOGI_DEBUG_TT_TRACE, RSHOGI_DEBUG_TT_SANITY,
# RSHOGI_DISABLE_HELPER_TT_WRITE, RSHOGI_TT_TRACE_ROOT_MOVE 等
tt-trace = []
# YaneuraOu DEEP相当のデフォルト遅延設定を使う
# GPU/ネットワーク待ちが長い環境向けの遅延マージン(400/1400ms)プリセットを有効化する
deep = []
# 探索経路限定で pass_rights を無効化（Position/MoveGen の pass 機能は保持）
search-no-pass-rules = []

[lib]
name = "rshogi_core"
path = "src/lib.rs"
