[package]
name = "rshogi-core"
version = "0.2.4"
edition = "2024"
authors = ["SH11235"]
description = "A high-performance shogi engine core library with NNUE evaluation"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "japanese-chess", "game", "engine", "nnue"]
categories = ["games", "game-engines"]
readme = "README.md"
build = "build.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
log.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
serde.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Keep in sync with clap's transitive windows-sys (0.60.x) to avoid duplicate versions on Windows.
windows-sys = { version = "0.60.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
] }

# getrandom for WebAssembly support (required by rand)
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true }
# Rayon for parallel search in Wasm (enabled via wasm-threads feature)
rayon = { version = "1.10", optional = true }

[dev-dependencies]
# Test dependencies

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
web-time = "1"

[features]
# 探索経路では pass_rights / PASS NMP を無効化
# Web/WASM で pass ルールを使う場合は default-features=false で無効化する。
# Phase 1 互換: 旧 feature 名 `layerstacks-1536x16x32` は alias で
# 新 `ls-size-1536x16x32` を引き込む。Phase 2 で default を edition-* に切替予定。
default = ["search-no-pass-rules", "layerstacks-1536x16x32"]

# === 開発・診断・横断系 (Edition 軸非対象、ADR 「移行対象外」参照) ===
# デバッグ機能
debug = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = []
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = []
# SIMD最適化（AVX2）
simd_avx2 = []
# 診断ログ
diagnostics = []
# WebAssembly スレッドビルド用フラグ
# wasm-bindgen-rayon + rayon を使用した LazySMP 並列探索を有効化
# 詳細は docs/wasm-multithreading-investigation.md を参照。
wasm-threads = ["rayon"]
# アプリ向け指し手特徴量抽出（解説生成等で使用）
move-features = []
# TT trace / helper TT write 制御（並列探索デバッグ用）
# 有効時は環境変数で制御: RSHOGI_DEBUG_TT_TRACE, RSHOGI_DEBUG_TT_SANITY,
# RSHOGI_DISABLE_HELPER_TT_WRITE, RSHOGI_TT_TRACE_ROOT_MOVE 等
tt-trace = []
# TT hit時の非PVノードで TT eval を再利用する（USE_LAZY_EVALUATE相当）
# 無効時は YO 現行ビルド整合のため常に NNUE 再評価する
use-lazy-evaluate = []
# YaneuraOu DEEP相当のデフォルト遅延設定を使う
# GPU/ネットワーク待ちが長い環境向けの遅延マージン(400/1400ms)プリセットを有効化する
deep = []
# 探索経路限定で pass_rights を無効化（Position/MoveGen の pass 機能は保持）
search-no-pass-rules = []
# Threat exclusion profiles (mutually exclusive)
# 除外 pair で Threat 次元を削減し、NPS を改善する。
# 詳細は crates/rshogi-core/src/nnue/threat_exclusion.rs の module doc 参照。
threat-profile-same-class = []               # profile 1: 同種ペア全除外
threat-profile-same-class-major-pawn = []   # profile 2: 同種 + 大駒→歩除外

# === Phase 1 新 atomic feature 群 (Edition 軸 ADR) ===
# 設計: docs/decisions/2026-05-24-build-edition-flavor-design.md
# atomic feature は private 扱い (Phase 2 で preset edition feature 経由のみを推奨)。
# 旧 feature 名 (`layerstack-only` / `layerstacks-*` / `nnue-psqt` / `nnue-threat`)
# は後方互換 alias として残し、Phase 2 で deprecate 予定。

# Architecture 経路有効化 slot
# - ls-arch:     LayerStack network 経路を含める
# - halfkx-arch: HalfKX family (HalfKP / HalfKa*) 経路を含める
# 旧 `layerstack-only` は ls-arch の alias (下記 alias セクション参照)。
ls-arch     = []
halfkx-arch = []

# LayerStack network L1 サイズ slot
# 旧 `layerstacks-1536x16x32` 等は ls-size-* の alias。
ls-size-1536x16x32 = []
ls-size-1536x32x32 = []
ls-size-768x16x32  = []
ls-size-512x16x32  = []

# LayerStack 拡張 slot (psqt / threat)
# 旧 `nnue-psqt` / `nnue-threat` は ls-ext-* の alias。
# - ls-ext-psqt:   AccumulatorLayerStacks に psqt_accumulation を含める。PSQT モデル読み込み可。
# - ls-ext-threat: AccumulatorLayerStacks に threat_accumulation を含める (+6KB/entry)。Threat モデル読み込み可。
ls-ext-psqt   = []
ls-ext-threat = []

# FT (Feature Transformer) 種別 slot
# Phase 2 で preset edition が使用、Phase 1 は declaration のみ (source 側 cfg gate は未追加)。
# Network 実装の現状: LS は ft-halfka_hm_merged 専用 hardcode、他 4 variant は Issue #734 で
# generic 化予定。
ft-halfkp           = []
ft-halfka_split     = []
ft-halfka_merged    = []
ft-halfka_hm_split  = []
ft-halfka_hm_merged = []

# HalfKX activation slot
# Phase 2 で preset edition が使用、Phase 1 は declaration のみ。
halfkx-activation-crelu    = []
halfkx-activation-screlu   = []
halfkx-activation-pairwise = []

# Build mode sentinel (preset edition がセット、build.rs 整合性チェック用)
# user が直接指定するものではなく、Phase 2 の preset `edition-*` 経由でのみ有効化される想定。
# - mode-universal: 全 architecture × 構成 dispatch、build.rs check 緩和
# - mode-family:    family dispatch、build.rs check 部分緩和
# - mode-specific:  単一構成 build、build.rs check 厳格 (size/activation/ft 1 個固定)
mode-universal = []
mode-family    = []
mode-specific  = []

# NNUE progress8kpabs バケットの差分更新最適化
# - 有効時: StackEntry に progress_sum/computed_progress フィールド追加、
#   ensure_progress_bucket で DirtyPiece 差分から O(1) 更新
# - Threat なし環境: +3〜4% NPS（有効）
# - Threat あり環境: -2% NPS（cache 圧迫で退行）
# - L0=1536 で +3〜4% / L0=768/512 で -2〜6% 退行 (memory feature_nnue_progress_diff)
# - 適用条件: build.rs で mode-specific + ls-size-1536x16x32 / ls-size-1536x32x32 を強制
#   (mode-* が立っていない Phase 1 互換 build では check は緩和され、user 責任で組合せ可)
# default では無効。運用モデルの特性に応じてビルド時に明示指定する。
nnue-progress-diff = []

# === 旧 feature 名 alias (Phase 2 merge と同時に deprecate 予定) ===
# 移行表は docs/decisions/2026-05-24-build-edition-flavor-design.md
# 「旧 feature 名 → 新 feature 名のマッピング (Phase 1 移行表)」を参照。
# alias によって旧 build スクリプト・CI 設定がそのまま動く。
layerstack-only        = ["ls-arch"]
layerstacks-1536x16x32 = ["ls-size-1536x16x32"]
layerstacks-1536x32x32 = ["ls-size-1536x32x32"]
layerstacks-768x16x32  = ["ls-size-768x16x32"]
layerstacks-512x16x32  = ["ls-size-512x16x32"]
nnue-psqt              = ["ls-ext-psqt"]
nnue-threat            = ["ls-ext-threat"]

[lib]
name = "rshogi_core"
path = "src/lib.rs"

# PSQT 統計ダンプツール
# `NetworkLayerStacks1536x16x32` のロードを行うため、`ls-ext-psqt` に加えて
# `ls-size-1536x16x32` が同時に有効な構成でのみビルドする。
# （未対応構成では `cargo build --bin dump_psqt_stats` が
#   "requires the features: ls-ext-psqt, ls-size-1536x16x32" で明示的に失敗する）
# 旧 feature 名 (`nnue-psqt` / `layerstacks-1536x16x32`) 指定でも alias 経由で
# 新 feature が立つため、`required-features` は新名で記述する。
[[bin]]
name = "dump_psqt_stats"
path = "src/bin/dump_psqt_stats.rs"
required-features = ["ls-ext-psqt", "ls-size-1536x16x32"]
