[package]
name = "rshogi-csa-server-tcp"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "TCP frontend for the CSA shogi game server."
license = "GPL-3.0-only"
repository = "https://github.com/SH11235/rshogi"

[dependencies]
rshogi-core = { path = "../rshogi-core" }
rshogi-csa-server = { path = "../rshogi-csa-server", default-features = false, features = ["tokio-transport"] }
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
# `tracing-subscriber` / `tracing-log` は subscriber 初期化系で本 binary 用途
# のみ。library crate に染み出さないよう workspace ではなく crate ローカルで
# 直接書く（dep 範囲を明示）。
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "tracing-log", "ansi"] }
tracing-log = "0.2"
# 1 connection task の panic を boundary に閉じ込めるため、async 対応の
# `FutureExt::catch_unwind` を runtime dep として追加する。`futures` メタクレート
# 経由ではなく `futures-util` を直接指定することで依存ツリーを最小化する
# (`futures-channel` 等を引き込まない)。`catch_unwind` は `std` feature 配下なので
# それのみを有効化する（async-await / executor / sink などは tokio で賄う）。
futures-util = { version = "0.3", default-features = false, features = ["std"] }
clap.workspace = true
serde.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "net", "signal"] }

[features]
default = []
# TCP バイナリが Workers 側のアダプタを取り込まないことを検査する defensive flag。
# 有効化すると `lib.rs` の `compile_error!` でビルドが停止する。feature unification で
# 上位依存から混入した場合に検知する用途。
workers = []

[[bin]]
name = "rshogi-csa-server-tcp"
path = "src/bin/main.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "net", "test-util"] }
