[package]
name = "rshogi-csa-server-tcp"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "TCP frontend for the CSA shogi game server."
license = "GPL-3.0-only"
repository = "https://github.com/SH11235/rshogi"

[dependencies]
rshogi-core = { path = "../rshogi-core" }
rshogi-csa-server = { path = "../rshogi-csa-server", default-features = false, features = ["tokio-transport"] }
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
# subscriber / log bridge は本 binary 用途のみ。workspace で version を pin
# しつつ、library crate 側で `.workspace = true` を書かないことで pull を抑止する。
tracing-subscriber.workspace = true
tracing-log.workspace = true
# 1 connection task の panic を boundary に閉じ込めるため、async 対応の
# `FutureExt::catch_unwind` を runtime dep として追加する。`futures` メタクレート
# 経由ではなく `futures-util` を直接指定することで依存ツリーを最小化する
# (`futures-channel` 等を引き込まない)。`catch_unwind` は `std` feature 配下なので
# それのみを有効化する（async-await / executor / sink などは tokio で賄う）。
futures-util = { version = "0.3", default-features = false, features = ["std"] }
# 接続数 / 対局数 / 指し手レイテンシ / 終局別カウンタ / 時間切れ数を Prometheus
# 互換テキスト形式で expose する。`metrics` は facade、recorder と HTTP listener
# は `metrics-exporter-prometheus` が提供する。recorder 未 install 時は
# `metrics::counter!` 等は NoOp で動くので、`--metrics-bind` 未指定の起動経路でも
# 安全。subscriber と同じく workspace で version を pin し binary でのみ参照する。
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "net", "signal"] }
# 私的対局 (`%%CHALLENGE`) で `+free` 指定の inviter / opponent の配色を
# `resolve_color_for_pair` で乱択するために必要。`rshogi-csa-server` 側
# pairing 戦略と同じ PRNG (Xoshiro256PlusPlus) を使うため、workspace 既定の
# `rand_xoshiro` も併せて引く。
rand.workspace = true
rand_xoshiro.workspace = true

[features]
default = []
# TCP バイナリが Workers 側のアダプタを取り込まないことを検査する defensive flag。
# 有効化すると `lib.rs` の `compile_error!` でビルドが停止する。feature unification で
# 上位依存から混入した場合に検知する用途。
workers = []

[[bin]]
name = "rshogi-csa-server-tcp"
path = "src/bin/main.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "net", "test-util"] }
