[package]
name = "rshogi-csa-server-workers"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "Cloudflare Workers frontend for the CSA shogi game server."
license = "GPL-3.0-only"
repository = "https://github.com/SH11235/rshogi"

[lib]
# cdylib は worker-build が wasm32 で cdylib を要求するため。
# rlib はホスト target でも pure-Rust ロジック (attachment / origin / config 等) を単体テスト
# できるようにするため残す。wasm32 以外では crate 本体はほぼ空になる。
crate-type = ["cdylib", "rlib"]

[dependencies]
# ホスト／wasm32 の双方で利用する依存のみをここに置く。
# Workers 固有 (`worker`, `worker-macros`, `wasm-bindgen` 等) は
# `[target.'cfg(target_arch = "wasm32")'.dependencies]` に分離して
# ホスト側 `cargo check --workspace` を壊さない。
rshogi-csa-server = { path = "../rshogi-csa-server", default-features = false, features = ["workers"] }
rshogi-csa = { path = "../rshogi-csa" }
rshogi-core = { path = "../rshogi-core" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
# chrono はホスト／wasm32 で挙動を揃えるため `clock` 既定を切り、
# serde 以外の機能は取り込まない。
chrono = { version = "0.4", default-features = false, features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wasm32-unknown-unknown 以外では参照しない。worker-build / wrangler dev から
# ビルドされる経路のみで有効化される。
worker = { version = "0.8", features = ["http", "axum"] }
worker-macros = { version = "0.8", features = ["http"] }
# `ws` feature は tokio-tungstenite を引き込み wasm32 でビルドが壊れる。
# WebSocket の受理は Durable Object の `state.acceptWebSocket` 側で行うため、
# axum には Router と json extractor のみを使う。
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
futures-util = "0.3"
async-trait = "0.1"

[features]
default = []
# Workers バイナリが tokio 依存のマルチスレッド経路を取り込まないことを検査する
# defensive flag。有効化されると `lib.rs` の `compile_error!` でビルドが停止する。
# wasm32 ランタイムが tokio multi-threaded primitive を扱えないため、feature
# unification で混入した場合にビルド段階で検知する用途。
tokio-transport = []

[dev-dependencies]
# host target の async テスト（`FloodgateHistoryStorage` の cold-start 契約検証等）
# で futures を駆動するためにのみ使用する。wasm32 ランタイムには取り込まれない。
tokio = { workspace = true, features = ["rt", "macros"] }
