[package]
name = "rshogi-csa-server"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "Core logic for a CSA protocol shogi game server (transport-agnostic)."
license = "GPL-3.0-only"
repository = "https://github.com/SH11235/rshogi"

[dependencies]
rshogi-core = { path = "../rshogi-core" }
rshogi-csa = { path = "../rshogi-csa" }
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
# `LeastDiffPairingStrategy` の試行回数ベース最適化で seed 可能 PRNG を使う。
# `rand` の `SliceRandom::shuffle` を使うため `rand` 本体も入れる。`rand_xoshiro`
# は cryptographic 強度不要・速度重視・seed 可で本用途に合う。
rand = { workspace = true }
rand_xoshiro = { workspace = true }
# Ruby shogi-server 互換 `players.yaml` の読み書きで使用する。実装本体は
# `tokio-transport` 配下の `storage::players_yaml` のみが触れるため、wasm32
# (workers) ビルドに不要な依存が入らないよう optional + `tokio-transport` 連動で
# 引き込む。
serde_yaml = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
# TCP フロントエンドを既定で有効にする。Cloudflare Workers (wasm32) ビルドでは
# `--no-default-features --features workers` を渡して tokio 依存を外す。
default = ["tokio-transport"]
# tokio 非同期ランタイムを使う `GameRoom::run` 等を有効化する。
tokio-transport = ["dep:tokio", "dep:serde_yaml"]
# Cloudflare Workers 等のシングルスレッド wasm ランタイム向けフラグ（現状は副作用なし）。
workers = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time", "io-util", "sync", "fs", "test-util"] }
# License 整合性 integration test (`tests/license_integrity.rs`) で workspace の各
# Cargo.toml を読むためだけに使う。
toml = { workspace = true }
