[package]
name = "rshogi-usi"
version = "0.1.0"
edition = "2021"
authors = ["sh11235"]
description = "USI protocol implementation for rshogi engine"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "usi", "japanese-chess", "engine", "protocol"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true

# Local dependencies
rshogi-core = { version = "0.1", path = "../rshogi-core" }

[features]
default = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = ["rshogi-core/search-stats"]
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = ["rshogi-core/nnue-stats"]

[[bin]]
name = "rshogi-usi"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
