[package]
name = "rshogi-usi"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "USI protocol implementation for rshogi engine"
license = "GPL-3.0-only"
repository = "https://github.com/sh11235/rshogi"
keywords = ["shogi", "usi", "japanese-chess", "engine", "protocol"]
categories = ["games", "game-engines"]
readme = "README.md"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true

# Local dependencies
rshogi-core = { version = "0.2", path = "../rshogi-core" }

[features]
default = []
# 探索統計収集（枝刈り発生回数等のカウント）
search-stats = ["rshogi-core/search-stats"]
# NNUE統計収集（refresh/update比率等のカウント）
nnue-stats = ["rshogi-core/nnue-stats"]
# TT書き込みトレースおよびhelper bound/depthフィルタ
tt-trace = ["rshogi-core/tt-trace"]
# LayerStack 専用ビルド（大会向け production 用）
layerstack-only = ["rshogi-core/layerstack-only"]
# NNUE 詳細診断ログ（Golden Forward テスト用）
diagnostics = ["rshogi-core/diagnostics"]
# NNUE PSQT ショートカット対応
nnue-psqt = ["rshogi-core/nnue-psqt"]
# NNUE Threat 特徴量対応
nnue-threat = ["rshogi-core/nnue-threat"]
# Threat exclusion profiles
threat-profile-same-class = ["rshogi-core/threat-profile-same-class"]
threat-profile-same-class-major-pawn = ["rshogi-core/threat-profile-same-class-major-pawn"]
# NNUE progress8kpabs 差分更新最適化（L1=1536 で有効、L1=768 で退行）
nnue-progress-diff = ["rshogi-core/nnue-progress-diff"]
# LayerStacks exact architecture / L1 バリアント
layerstacks-1536x16x32 = ["rshogi-core/layerstacks-1536x16x32"]
layerstacks-1536x32x32 = ["rshogi-core/layerstacks-1536x32x32"]
layerstacks-768x16x32 = ["rshogi-core/layerstacks-768x16x32"]
layerstacks-512x16x32 = ["rshogi-core/layerstacks-512x16x32"]

[[bin]]
name = "rshogi-usi"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0"
serial_test = "3"
