[package]
name = "tools"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "Performance benchmarking and analysis tools for shogi engine"
license = "GPL-3.0-only"
repository = "https://github.com/SH11235/rshogi"

[features]
default = ["layerstacks-1536"]
# 診断ログ（EvalHashヒット率など）
diagnostics = ["rshogi-core/diagnostics"]
# NNUE PSQT / Threat 対応
nnue-psqt = ["rshogi-core/nnue-psqt"]
nnue-threat = ["rshogi-core/nnue-threat"]
# Threat exclusion profiles
threat-profile-same-class = ["rshogi-core/threat-profile-same-class"]
threat-profile-same-class-major-pawn = ["rshogi-core/threat-profile-same-class-major-pawn"]
threat-profile-cross-side = ["rshogi-core/threat-profile-cross-side"]
# LayerStacks L1 サイズ
layerstacks-1536 = ["rshogi-core/layerstacks-1536"]
layerstacks-768 = ["rshogi-core/layerstacks-768"]
layerstacks-512 = ["rshogi-core/layerstacks-512"]
# AobaZero ONNX直接推論（ONNX Runtime + CUDA が必要）
aobazero-onnx = ["dep:ort", "dep:ndarray"]
# 標準dlshogi ONNX直接推論（DL水匠等、ONNX Runtime + CUDA が必要）
dlshogi-onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
flate2.workspace = true
env_logger.workspace = true
log.workspace = true

# Local dependencies
rshogi-core = { path = "../rshogi-core" }
rshogi-csa = { path = "../rshogi-csa" }

# Additional dependencies
sysinfo = "0.37"
reqwest = { version = "0.12", features = ["blocking"] }
walkdir = "2.5"
url = "2.5"
rayon = "1.10"
crossbeam-channel = "0.5"
ctrlc = "3.4"
libc = "0.2"
indicatif = "0.18"
rand = "0.9"
rand_chacha = "0.9"
byteorder = "1.5"
tempfile = "3.20"
glob = "0.3"
regex.workspace = true
toml.workspace = true

# AobaZero ONNX direct inference (optional, behind "aobazero-onnx" feature)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["load-dynamic", "api-24"] }
ndarray = { version = "0.16", optional = true }
