[package]
name = "tools"
version = "0.1.0"
edition = "2024"
authors = ["SH11235"]
description = "Performance benchmarking and analysis tools for shogi engine"
license = "GPL-3.0-only"
repository = "https://github.com/SH11235/rshogi"

[features]
default = ["layerstacks-1536x16x32"]
# 診断ログ（EvalHashヒット率など）
diagnostics = ["rshogi-core/diagnostics"]
# NNUE PSQT / Threat 対応
nnue-psqt = ["rshogi-core/nnue-psqt"]
nnue-threat = ["rshogi-core/nnue-threat"]
# Threat exclusion profiles
threat-profile-same-class = ["rshogi-core/threat-profile-same-class"]
threat-profile-same-class-major-pawn = ["rshogi-core/threat-profile-same-class-major-pawn"]
# LayerStacks exact architecture / L1 サイズ
layerstacks-1536x16x32 = ["rshogi-core/layerstacks-1536x16x32"]
layerstacks-1536x32x32 = ["rshogi-core/layerstacks-1536x32x32"]
layerstacks-768x16x32 = ["rshogi-core/layerstacks-768x16x32"]
layerstacks-512x16x32 = ["rshogi-core/layerstacks-512x16x32"]
# AobaZero ONNX直接推論（ONNX Runtime + CUDA が必要）
aobazero-onnx = ["dep:ort", "dep:ndarray"]
# 標準dlshogi ONNX直接推論（DL水匠等、ONNX Runtime + CUDA が必要）
dlshogi-onnx = ["dep:ort", "dep:ndarray"]

[dependencies]
# Workspace dependencies
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
flate2.workspace = true
env_logger.workspace = true
log.workspace = true

# Local dependencies
rshogi-core = { path = "../rshogi-core" }
rshogi-csa = { path = "../rshogi-csa" }
# CSA プロトコル送信側 serialize / 受信側 parse の単一ソース。
# `default-features=false` で `tokio-transport` (tokio + serde_yaml) を切り、
# protocol モジュールが必要とする pure な型 / 関数のみを取り込む。
rshogi-csa-server = { path = "../rshogi-csa-server", default-features = false }

# Additional dependencies
sysinfo = "0.37"
reqwest = { version = "0.12", features = ["blocking"] }
walkdir = "2.5"
url = "2.5"
rayon = "1.10"
crossbeam-channel = "0.5"
ctrlc = "3.4"
libc = "0.2"
indicatif = "0.18"
rand = "0.9"
rand_chacha = "0.9"
byteorder = "1.5"
tempfile = "3.20"
glob = "0.3"
regex.workspace = true
toml.workspace = true

# AobaZero ONNX direct inference (optional, behind "aobazero-onnx" feature)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["load-dynamic", "api-24"] }
ndarray = { version = "0.16", optional = true }
